refactoring and update

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 Fundamentals/Exercises/02. Python-Dictionaries/~$. Dictionaries-Exercise-Dictionaries.docx
+Fundamentals/~$05. Files-and-Errors-Presentation.pptx
