users database temporary upload

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Fundamentals/Exercises/02. Python-Dictionaries/~$. Dictionaries-Exercise-Dictionaries.docx
 Fundamentals/~$05. Files-and-Errors-Presentation.pptx
+Fundamentals/Exercises/03. Files-and-errors/~$. Files-and-Errors-Exercises.docx
