--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 Fundamentals/Exercises/06. Objects-and-Classes/~$. Objects-and-Classes-Exercise-Basics.docx
+Fundamentals/Exercises/07. Objects-and-Classes-II/~$. Objects-and-Classes-Exercise-II.docx
