updated lists solution

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Fundamentals/Exercises/06. Objects-and-Classes/~$. Objects-and-Classes-Exercise-Basics.docx
 Fundamentals/Exercises/07. Objects-and-Classes-II/~$. Objects-and-Classes-Exercise-II.docx
+Fundamentals/Exam-Preparation/Exam-Prep-II/~$am-prep-II.docx
