upload exam-preparation problems

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Fundamentals/Exercises/06. Objects-and-Classes/~$. Objects-and-Classes-Exercise-
 Fundamentals/Exercises/07. Objects-and-Classes-II/~$. Objects-and-Classes-Exercise-II.docx
 Fundamentals/Exam-Preparation/Exam-Prep-II/~$am-prep-II.docx
 Fundamentals/Exam-26.08.2018/~$. Date_Estimation_Problem Description.docx
+*.pptx
