--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Fundamentals/Exercises/07. Objects-and-Classes-II/~$. Objects-and-Classes-Exerci
 Fundamentals/Exam-Preparation/Exam-Prep-II/~$am-prep-II.docx
 Fundamentals/Exam-26.08.2018/~$. Date_Estimation_Problem Description.docx
 *.pptx
+__pycache__
